[gd_scene load_steps=12 format=2]

[ext_resource path="res://Revisi/boss.png" type="Texture" id=1]
[ext_resource path="res://Bossna.gd" type="Script" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 1500, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 1800, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 2100, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 2400, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 900, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 1200, 0, 300, 300 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "serang",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "duduk",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 65.3225, 53.62 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 269.008, 136.533 )

[node name="Boss" type="KinematicBody2D"]
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "duduk"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.975895, 29.8671 )
shape = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="."]

[node name="batasarea" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3.94181, 20.5149 )
scale = Vector2( 0.506, 0.468 )
shape = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 95.4904, 8.11322 )
__meta__ = {
"_gizmo_extents_": 19.7
}
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
